--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-slick": "^0.31.0",
     "react-social-icons": "^6.25.0",
     "react-swipeable": "^7.0.2",
+    "react-zoom-pan-pinch": "^3.7.0",
     "sharp": "^0.34.5",
     "swiper": "^12.0.2",
     "uuid": "^13.0.0",
