add file robots.txt and sitemap.xml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "googleusercontent",
         "governorates",
         "kvdv",
+        "lastmod",
         "Lujain",
         "LUJAYN",
         "myapp",
