--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sitemap": "next-sitemap"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.9",
@@ -30,6 +31,7 @@
     "nanoid": "^5.1.6",
     "next": "14.2.18",
     "next-auth": "^4.24.13",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.11",
     "react": "^18",
     "react-bootstrap": "^2.10.10",
